feat(项目设置): 增加文件批量移动的方法